# ghostpost_backend

./: db.sqlite3  pyproject.toml
api/: serializers.py  views.py
backend/: settings.py  urls.py
ghostpost/: admin.py  models.py
ghostpost/migrations/: 0001_initial.py  0002_auto_20201004_0958.py
